fix header search clipping issue

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -429,8 +429,6 @@ table {
 
 .layout > header nav {
   float: right;
-  overflow-x: auto;
-  overflow-y: hidden;
   white-space: nowrap;
 }
 
